# sum-protocol-actors

./: Cargo.toml
src/: interactive.rs  main.rs  polynomial.rs  scalar.rs  transcript.rs
src/interactive/: sum_check.rs
