[package]
name = "fiat-shamir-actor"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = { version = "0.5.0", features = ["derive"] }
ark-std = { version = "0.5.0", features = ["getrandom"] }
itertools = "0.14.0"
kameo = "0.14.0"
sha3 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
